Fixed source code highlighting black text in dark mode

--- a/app/resources/sass/dark-mode.scss
+++ b/app/resources/sass/dark-mode.scss
@@ -100,5 +100,10 @@
         hr {
             @apply border-gray-800;
         }
+
+        .hljs,
+        .hljs-keyword {
+            @apply text-white;
+        }
     }
 }
